<resources>
    <string name="navigation_drawer_open">打开侧滑</string>
    <string name="navigation_drawer_close">关闭侧滑</string>
    <string name="nav_header_title">title</string>
    <string name="nav_header_subtitle">subtitle</string>

    <string name="search">搜索</string>
    <string name="my">我的</string>
    <string name="discover">发现</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="get">获取</string>
    <string name="retry">重试</string>
    <string name="delete">删除</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="collection">歌单</string>
    <string name="edit">编辑</string>
    <string name="name">名称</string>
    <string name="single_music">单曲</string>
    <string name="album">专辑</string>
    <string name="artist">歌手</string>
    <string name="store">收藏</string>
    <string name="music">歌曲</string>
    <string name="introduction">介绍</string>
    <string name="record_audio">录音</string>
    <string name="import_from">导入</string>

    <string name="num_with_bracket">(%1$d)</string>
    <string name="name_with_bracket">(%1$s)</string>
    <string name="hint_need_permission">需要获取权限</string>
    <string name="play_all">播放全部</string>
    <string name="music_num">%1$d首</string>
    <string name="play_by_list">列表循环</string>
    <string name="play_by_random">随机播放</string>
    <string name="play_by_single">单曲循环</string>
    <string name="clear_cache">清空缓存</string>
    <string name="night">夜间模式</string>
    <string name="schedule_close">定时关闭</string>
    <string name="local_music">本地音乐</string>
    <string name="recent_play">最近播放</string>
    <string name="loading">加载中，请稍后</string>
    <string name="my_music_collect">我的歌单</string>
    <string name="my_love">我喜欢的</string>
    <string name="my_store">我的收藏</string>
    <string name="add_collection">新建歌单</string>
    <string name="save_to_collection">收藏到歌单</string>
    <string name="select_collection">选择歌单</string>
    <string name="edit_collection">编辑歌单</string>
    <string name="downloading">下载中</string>
    <string name="view_artist">查看歌手</string>
    <string name="view_album">查看专辑</string>
    <string name="version_update">版本更新</string>
    <string name="check_update">检查更新</string>
    <string name="overlay_window">悬浮窗</string>
    <string name="no_music">没有音乐</string>

    <string name="hint_add_music_to_collection_success">成功添加音乐到:%1$s</string>
    <string name="hint_collection_name">请输入歌单标题</string>
    <string name="hint_no_playing_music">当前没有播放中音乐</string>
    <string name="hint_download_fail">下载失败</string>
    <string name="hint_music_invalid">歌曲不可用</string>
    <string name="hint_no_data">没有数据</string>
    <string name="hint_no_new_version">已经是最新版本</string>
    <string name="hint_get_overlay_permission">需要获取悬浮窗权限</string>

    <!-- 登录 -->
    <string name="login_in">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="error_invalid_account">账号不合法</string>
    <string name="error_invalid_password">密码不合法</string>
    <string name="error_login_fail">登录失败</string>
    <string name="error_field_required">请输入</string>
</resources>
