<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_record_audio"
            android:title="@string/record_audio"/>
        <item
            android:id="@+id/nav_import_from"
            android:title="@string/import_from"/>
        <item
            android:id="@+id/nav_schedule_close"
            android:title="@string/schedule_close"/>
        <item
            android:id="@+id/nav_night"
            android:title="@string/night"/>
        <item
            android:id="@+id/nav_clear_cache"
            android:title="@string/clear_cache"/>
        <item
            android:id="@+id/nav_check_update"
            android:title="@string/check_update"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_exit"
            android:title="@string/exit"/>
    </group>

</menu>
